--- a/static/apps.html
+++ b/static/apps.html
@@ -92,7 +92,7 @@
       <div class="span1">
         <div class="card animals" loading="lazy">
           <a onclick="go('https://chatgptproxy.me')">
-            <img loading="lazy" src="/assets/images/icons/chatgpt.png" style="border-radius: 25px;" />
+            <img loading="lazy" src="/assets/images/icons/chatgpt.webp" style="border-radius: 25px;" />
           </a>
           <p3>ChatGPT</p3>
         </div>
